# Rust

./: Cargo.toml  correction.rs  machine.json
v010_spaghetti/: Cargo.toml
v010_spaghetti/src/: lib.rs  main.rs
v010_spaghetti/tests/: voting_tests.rs
v020_configuration/: Cargo.toml
v020_configuration/src/: lib.rs  main.rs
v020_configuration/tests/: voting_tests.rs
v021_app_builder/: Cargo.toml
v021_app_builder/src/: app_builder.rs  lib.rs  main.rs
v021_app_builder/tests/: voting_tests.rs
v030_domain/src/: lib.rs
v040_memory/: Cargo.toml
v040_memory/src/: configuration.rs  domain.rs  main.rs
v041_file/: Cargo.toml
v041_file/src/: app_builder.rs  configuration.rs  domain.rs  lib.rs  main.rs
v041_file/src/storages/: memory.rs
v041_file/tests/: voting_tests.rs
v050_use_case/: Cargo.toml
v050_use_case/src/: app_builder.rs  lib.rs  main.rs  use_case.rs
v050_use_case/src/storages/: file.rs
v050_use_case/tests/: voting_tests.rs
v060_text_interfaces/: Cargo.toml  machine.json
v060_text_interfaces/src/: app_builder.rs  configuration.rs  domain.rs  lib.rs  main.rs
v060_text_interfaces/src/interfaces/: cli_interface.rs  mod.rs
v060_text_interfaces/src/interfaces/lexicons/: english.rs  mod.rs
v060_text_interfaces/tests/: voting_tests.rs
v070_cli_services/: Cargo.toml
v070_cli_services/src/: app_builder.rs  configuration.rs  main.rs  service.rs
v070_cli_services/src/interfaces/: cli_interface.rs  lexicon.rs
v070_cli_services/src/interfaces/lexicons/: french.rs
v070_cli_services/src/services/: mod.rs  stdio.rs  udp.rs
v070_cli_services/src/storages/: file.rs
v071_tcp_services/: Cargo.toml
v071_tcp_services/src/: app_builder.rs  configuration.rs  main.rs  use_case.rs
v071_tcp_services/src/interfaces/: cli_interface.rs
v071_tcp_services/src/services/: stdio.rs  tcp.rs  udp.rs
v071_tcp_services/tests/: voting_tests.rs
v080_html/: Cargo.toml
v080_html/src/: configuration.rs  lib.rs  main.rs  use_case.rs
v080_html/src/interfaces/web_interfaces/: html_formatter.rs  html_handlers.rs  mod.rs  router.rs  web_routes.rs
v080_html/src/services/: udp.rs
v080_html/src/storages/: file.rs  memory.rs
v080_html/tests/: voting_tests.rs
v090_json/: Cargo.toml
v090_json/src/: app_builder.rs  main.rs  service.rs  storage.rs
v090_json/src/interfaces/: cli_interface.rs  mod.rs
v090_json/src/interfaces/web_interfaces/: mod.rs  router.rs  web_routes.rs
v090_json/src/interfaces/web_interfaces/json/v1/: mod.rs  v1_formatter.rs  v1_handler.rs
v090_json/src/services/: mod.rs  stdio.rs  web.rs
v090_json/tests/: voting_tests.rs
