[workspace]

resolver = "2"

members = ["v010_spaghetti",
           "v020_configuration",
           "v021_app_builder",
           "v030_domain",
           "v040_memory",
           "v041_file",
           "v050_use_case",
           "v060_text_interfaces",
           "v070_cli_services",
           "v071_tcp_services",
           "v080_html"
]
