[package]
name = "v020_configuration"
version = "0.1.0"
edition = "2024"

[lib]
name = "v020_configuration"
path = "src/lib.rs"

[[bin]]
name = "v020_configuration"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1.37", features = ["full"] }

