[package]
name = "v040_memory"
description = ""
version = "0.1.0"
edition = "2024"

[lib]
name = "v040_memory"
path = "src/lib.rs"

[[bin]]
name = "v040_memory"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1.37", features = ["full"] }
async-trait = "0.1"

[dev-dependencies]
v040_memory = { path = "../v040_memory" }

