[package]
name = "v060_text_interfaces"
description = ""
version = "0.1.0"
edition = "2024"

[lib]
name = "v060_text_interfaces"
path = "src/lib.rs"

[[bin]]
name = "v060_text_interfaces"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1.37", features = ["full"] }
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
v060_text_interfaces = { path = "../v060_text_interfaces" }

