[package]
name = "v071_tcp_services"
description = ""
version = "0.1.0"
edition = "2024"

[lib]
name = "v071_tcp_services"
path = "src/lib.rs"

[[bin]]
name = "v071_tcp_services"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1.37", features = ["full"] }
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
v070_cli_services = { path = "../v070_cli_services" }

